--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -7,7 +7,9 @@
                 <button class="px-6 py-2 rounded-full text-white font-bold mt-4 btn-primary">Order Now</button>
             </div>
             <div class="w-1/2">
-                <img src="/img/hero-pizza.png" alt="">
+                <!-- <img src="https://i.pinimg.com/originals/79/a3/84/79a384c3c449ad01b0e57e790807b2c0.gif"  alt=""> -->
+                <!-- <img src="/img/hero-pizza.png"> -->
+                <img src="/img/Mural artist.gif">
             </div>
         </div>
 
@@ -17,143 +19,36 @@
     <section class="menu container mx-auto px-10 py-8">
         <h1 class="text-xl font-bold mb-8">All Pizzas</h1>
         <div class="grid grid-cols-4 gap-x-12 gap-y-16">
+
+
+
+
+
+            <% arts.forEach(function(art) { %>
             <div class="w-64">
-                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                <img class="h-40 mb-4 mx-auto" src="/img/<%= art.image %>" alt="">
                 <div class="text-center">
-                    <h2 class="mb-4 text-lg">Margerita</h2>
-                    <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
+                    <h2 class="mb-4 text-lg"><%= art.name %></h2>
+                    <span class=" size py-1 px-4 rounded-full uppercase text-xs"><%= art.size %></span>
                     <div class="flex items-center justify-around mt-6">
-                        <span class="font-bold text-lg ">$250</span>
-                        <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                        <span class="font-bold text-lg ">₹<%= art.price %></span>
+                        <button data-art="<%= JSON.stringify(art) %>" class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
                             <span>+</span>
-                            <span class="ml-4">Add</span>
+                            <span class="ml-4">Add to Cart</span>
                         </button>
                     </div>
                 </div>
             </div>
-
+            <% }) %>
             <!--           -->
 
             <!---->
-            <div class="w-64">
-                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
-                <div class="text-center">
-                    <h2 class="mb-4 text-lg">Margerita</h2>
-                    <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
-                    <div class="flex items-center justify-around mt-6">
-                        <span class="font-bold text-lg ">$250</span>
-                        <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-                            <span>+</span>
-                            <span class="ml-4">Add</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
+            
 
             <!---->
             <!---->
-            <div class="w-64">
-                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
-                <div class="text-center">
-                    <h2 class="mb-4 text-lg">Margerita</h2>
-                    <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
-                    <div class="flex items-center justify-around mt-6">
-                        <span class="font-bold text-lg ">$250</span>
-                        <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-                            <span>+</span>
-                            <span class="ml-4">Add</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!---->
-            <!---->
-            <div class="w-64">
-                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
-                <div class="text-center">
-                    <h2 class="mb-4 text-lg">Margerita</h2>
-                    <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
-                    <div class="flex items-center justify-around mt-6">
-                        <span class="font-bold text-lg ">$250</span>
-                        <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-                            <span>+</span>
-                            <span class="ml-4">Add</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!---->
-            <!---->
-            <div class="w-64">
-                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
-                <div class="text-center">
-                    <h2 class="mb-4 text-lg">Margerita</h2>
-                    <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
-                    <div class="flex items-center justify-around mt-6">
-                        <span class="font-bold text-lg ">$250</span>
-                        <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-                            <span>+</span>
-                            <span class="ml-4">Add</span>
-                    
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!---->
-            <!---->
-            <div class="w-64">
-                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
-                <div class="text-center">
-                    <h2 class="mb-4 text-lg">Margerita</h2>
-                    <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
-                    <div class="flex items-center justify-around mt-6">
-                        <span class="font-bold text-lg ">$250</span>
-                        <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-                            <span>+</span>
-                            <span class="ml-4">Add</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!---->
-            <!---->
-            <div class="w-64">
-                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
-                <div class="text-center">
-                    <h2 class="mb-4 text-lg">Margerita</h2>
-                    <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
-                    <div class="flex items-center justify-around mt-6">
-                        <span class="font-bold text-lg ">$250</span>
-                        <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-                            <span>+</span>
-                            <span class="ml-4">Add</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!---->
-            <!---->
-            <div class="w-64">
-                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
-                <div class="text-center">
-                    <h2 class="mb-4 text-lg">Margerita</h2>
-                    <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
-                    <div class="flex items-center justify-around mt-6">
-                        <span class="font-bold text-lg ">$250</span>
-                        <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-                            <span>+</span>
-                            <span class="ml-4">Add</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!---->
+        
+            <!---->    
 
             <!--           -->
         </div>
