--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -1,7 +1,7 @@
 //colours
-$primary:#FE5F1E;
-$primary-hover:#b23301;
-$secondary:#F8F8F8;
+$primary:#00ff73;
+$primary-hover:#006435;
+$secondary:#daffe8;
 $pure:#fff;
 $dark:#232323;
 $gray:#ccc;
