--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -1,17 +1,6 @@
 <section class="cart py-16">
-    <!-- <div class="empty-cart py-16">
-        <div class="container mx-auto text-center">
-            <h1 class="text-3xl font-bold mb-2">Cart Empty</h1>
-            <p class="text-gray-500 text-lg mb-12">You probably haven't ordered a pizza yet.<br>
-                To order a pizza, go to the main page.
-            </p>
-            <img class="w-2/5 mx-auto" src="/img/empty-cart.png" alt="empty-cart">
-            <a href="/" class="inline-block px-6 py-2 rounded-full btn-primary text-white font-bold mt-12">Go Back</a>
     
-        </div>
-    
-    </div> -->
-
+    <% if(session.cart) { %>
     <div class="order container mx-auto w-1/2">
         <div class="flex items-center border-b border-gray-300 pb-4">
             <img src="/img/cart-black.png" alt=''>
@@ -19,21 +8,24 @@
 
         </div>
         <div class="pizza-list">
+            <% for(let art of Object.values(session.cart.items)) { %>
             <div class="flex items-center my-8">
-                <img class="w-24" src="/img/pizza.png" alt="">
+                <img class="w-24" src="/img/<%= art.item.image%>" alt="">
             
             <div class="flex-1 ml-4">
-                <h1>Mariana</h1>
-                <span>MEDIUM</span>
+                <h1><%= art.item.name%></h1>
+                <span><%= art.item.size%></span>
             </div>
-            <span class="flex-1">1 Pcs</span>
-            <span class="font-bold text-lg">$ 300</span>
+            <span class="flex-1"><%= art.qty%> Pcs</span>
+            <span class="font-bold text-lg">₹ <%= art.item.price * art.qty%></span>
 
         </div>
 
+        <% } %>
 
 
-        <div class="flex items-center my-8">
+
+        <!-- <div class="flex items-center my-8">
             <img class="w-24" src="/img/pizza.png" alt="">
         
         <div class="flex-1 ml-4">
@@ -43,9 +35,9 @@
         <span class="flex-1">1 Pcs</span>
         <span class="font-bold text-lg">$ 300</span>
 
-    </div>
+    </div> -->
 
-    <div class="flex items-center my-8">
+    <!-- <div class="flex items-center my-8">
         <img class="w-24" src="/img/pizza.png" alt="">
     
     <div class="flex-1 ml-4">
@@ -55,14 +47,14 @@
     <span class="flex-1">1 Pcs</span>
     <span class="font-bold text-lg">$ 300</span>
 
-</div>
+</div> -->
 
         </div>
         <hr>
         <div class="text-right py-4">
             <div>
                 <span class="text-lg font-bold">Total Amount: </span>
-                <span class="amount text-2xl font-bold ml-2">$300</span>
+                <span class="amount text-2xl font-bold ml-2">₹ <%= session.cart.totalPrice %></span>
             </div>
             <div>
                 <form action="" class="mt-12">
@@ -78,5 +70,22 @@
             <a href="" class="inline-block cursor-pointer btn-primary px-6 py-2 rounded-full text-white font-bold mt-6">Login to continue</a>
         </div>
     </div>
+
+    <% } else { %>
+
+    <div class="empty-cart py-16">
+        <div class="container mx-auto text-center">
+            <h1 class="text-3xl font-bold mb-2">Cart Empty</h1>
+            <p class="text-gray-500 text-lg mb-12">You probably haven't ordered a pizza yet.<br>
+                To order a pizza, go to the main page.
+            </p>
+            <!-- <img class="w-2/5 mx-auto" src="/img/empty-cart.png" alt="empty-cart"> -->
+            <img class="w-2/5 mx-auto" src="/img/Add to Cart.gif" alt="empty-cart">
+            <a href="/" class="inline-block px-6 py-2 rounded-full btn-primary text-white font-bold mt-12">Go Back</a>
+    
+        </div>
+    
+    </div>
+    <% } %>
 
 </section>
