--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -17,7 +17,7 @@
     
 
     <section class="menu container mx-auto px-10 py-8">
-        <h1 class="text-xl font-bold mb-8">All Pizzas</h1>
+        <h1 class="text-xl font-bold mb-8">All Artworks</h1>
         <div class="grid grid-cols-4 gap-x-12 gap-y-16">
 
 
