--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -1,7 +1,8 @@
+
 //colours
-$primary:#00ff73;
-$primary-hover:#006435;
-$secondary:#daffe8;
+$primary:#ff005d;
+$primary-hover:#640025;
+$secondary:#ffecf3;
 $pure:#fff;
 $dark:#232323;
 $gray:#ccc;
