--- a/public/css/app.css
+++ b/public/css/app.css
@@ -281,74 +281,289 @@ body {
   color: #232323;
 }
 
+.title {
+  font-family: "Kaushan Script", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  color: #232323;
+}
+
+.tbtop {
+  background-color: #ff005d;
+}
+
 nav li:last-child a {
-  background: #00ff73;
+  background: #ff005d;
 }
 nav li:last-child a:hover {
-  background: #006435;
+  background: #640025;
 }
 
 nav li a {
   transition: all 0.3s ease-in-out;
 }
 nav li a:hover {
-  color: #00ff73;
+  color: #ff005d;
 }
 
 section.hero {
-  background: #daffe8;
+  background: #ffecf3;
 }
 
-.size {
-  background: #daffe8;
+.code {
+  background: #ffecf3;
 }
 
 .add-to-cart {
-  border: 2px solid #00ff73;
-  color: #00ff73;
+  border: 2px solid #ff005d;
+  color: #ff005d;
   transition: all 0.3s ease-in-out;
 }
 .add-to-cart:hover {
-  background: #00ff73;
+  background: #ff005d;
   border-color: #fff;
   color: #fff;
 }
 
 .btn-primary {
-  background: #00ff73;
+  background: #ff005d;
   transition: all 0.3s ease-in-out;
 }
 .btn-primary:hover {
-  background: #006435;
+  background: #640025;
 }
 
 section.cart {
-  background: #daffe8;
+  background: #ffecf3;
 }
 section.cart .amount {
-  color: #00ff73;
+  color: #ff005d;
 }
 
 section.login {
-  background: #daffe8;
+  background: #ffecf3;
   min-height: calc(100vh - 112px);
 }
 section.login a {
-  color: #00ff73;
+  color: #ff005d;
 }
 section.login a:hover {
-  color: #006435;
+  color: #640025;
 }
 
 .noty_theme__mint {
   border-radius: 50px !important;
   padding-left: 8px !important;
   border: black solid 3px !important;
-  background-color: #00ffb3 !important;
+  background-color: #ff005d !important;
   -webkit-text-decoration: black !important;
           text-decoration: black !important;
 }
 
 a.link {
-  color: #00ff73;
+  color: #ff005d;
+}
+
+section.status {
+  background: #ffecf3;
+  min-height: calc(100vh - 86px);
+}
+
+.status-box {
+  padding: 60px 0 0;
+}
+
+.status-box ul {
+  margin-left: 84px;
+}
+
+.status-box ul li span {
+  position: relative;
+  padding-left: 20px;
+}
+
+.status-box ul li span:after {
+  content: "";
+  position: absolute;
+  left: -10px;
+  top: 50%;
+  background: #232323;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  transform: translateY(-50%);
+  box-shadow: 0 0 1px 10px #ffecf3;
+}
+
+.status-box ul li span:before {
+  font-family: "Line Awesome Free";
+  font-size: 46px;
+  font-weight: 600;
+  position: absolute;
+  left: -90px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: inherit;
+}
+
+.status-box ul li:nth-child(1) span:before {
+  content: "\f46c";
+}
+
+.status-box ul li:nth-child(2) span:before {
+  content: "\f560";
+}
+
+.status-box ul li:nth-child(3) span:before {
+  content: "\f06b";
+}
+
+.status-box ul li:nth-child(4) span:before {
+  content: "\f0d1";
+}
+
+.status-box ul li:nth-child(5) span:before {
+  content: "\f582";
+}
+
+.status-box ul li {
+  position: relative;
+}
+
+.status-box ul li:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -6px;
+  width: 2px;
+  height: 100%;
+  background: #232323;
+  margin-top: 10px;
+}
+
+.status-box ul li:nth-child(5) span:after {
+  box-shadow: 0 20px 1px 20px #ffecf3;
+}
+
+.status-box ul li.step-completed:before {
+  background: #ccc;
+}
+
+.status-box ul li.step-completed span:after {
+  background: #ccc;
+}
+
+.status-box ul li.step-completed span {
+  color: #ccc;
+}
+
+.status-box ul li.current span {
+  color: #ff005d;
+}
+
+.status-box ul li.current span:after {
+  background: #ff005d;
+}
+
+.status-box ul li small {
+  float: right;
+  font-size: 14px;
+  margin-top: 8px;
+}
+
+.searchitem {
+  background: #ffecf3;
+  padding: 50px;
+  margin: 50px;
+}
+
+#searchbtn {
+  background: #eeff00;
+  width: 20px;
+}
+
+#search {
+  color: black;
+  height: 40px;
+  width: 90%;
+  border: #640025 solid 2px;
+  margin-left: 20px;
+  margin-right: 60px;
+  border-radius: 15px;
+}
+
+.zoom:hover {
+  transition: all 0.3s ease-in-out;
+  height: 300px;
+  width: 480px;
+}
+
+.card {
+  overflow: hidden;
+  margin: 18px;
+  padding: 10px;
+  height: 340px;
+  width: 450px;
+  box-shadow: -2px 1px 42px 3px rgba(0, 0, 0, 0.49);
+  -webkit-box-shadow: -2px 1px 42px 3px rgba(0, 0, 0, 0.49);
+  -moz-box-shadow: -2px 1px 42px 3px rgba(0, 0, 0, 0.49);
+}
+.card:hover {
+  transition: all 0.3s ease-in-out;
+  background-color: rgba(243, 243, 243, 0.603);
+  box-shadow: -2px 1px 42px 6px rgba(255, 0, 179, 0.49);
+  -webkit-box-shadow: -2px 1px 42px 6px rgba(255, 0, 179, 0.49);
+  -moz-box-shadow: -2px 1px 42px 6px rgba(255, 0, 179, 0.49);
+}
+
+.update_db {
+  background: #ffecf3;
+  height: 60px;
+  padding: 10px;
+}
+
+.update_btn {
+  border: 2px solid #ff005d;
+  color: #ff005d;
+  border-radius: 15px;
+  width: 150px;
+  transition: all 0.3s ease-in-out;
+}
+.update_btn:hover {
+  background: #ff005d;
+  border-color: #fff;
+  color: #fff;
+}
+
+.inpbox {
+  padding: 5px;
+  margin: 5px;
+  width: 220px;
+  border: 2px solid #ff005d;
+}
+
+.description {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ff005d;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #640025;
 }
