--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -10,6 +10,21 @@ body{
     
 }
 
+.title{
+    font-family: 'Kaushan Script',sans-serif;
+    -webkit-font-smoothing: antialiased;
+    color:$dark;
+
+}
+
+.tbtop{
+    background-color: $primary;
+}
+
+nav{
+   // border-bottom: rgb(255, 0, 157) solid 3px;
+}
+
 nav li:last-child a {
     background: $primary;
     &:hover {
@@ -28,7 +43,7 @@ section.hero {
     background: $secondary;
 }
 
-.size{
+.code{
     background: $secondary;
 }
 
@@ -74,7 +89,7 @@ section.login {
     border-radius: 50px!important;
     padding-left: 8px!important ;
     border: rgb(0, 0, 0) solid 3px!important;
-    background-color: rgb(0, 255, 179)!important;
+    background-color: $primary!important;
     text-decoration: rgb(0, 0, 0)!important;
 
 }
@@ -82,3 +97,234 @@ section.login {
 a.link {
     color: $primary;
 }
+
+
+section.status{
+    background: $secondary;
+    min-height: calc(100vh - 86px);
+}
+
+.status-box {
+    padding: 60px 0 0;
+}
+
+.status-box ul {
+    margin-left: 84px;
+}
+
+.status-box ul li span{
+    position: relative;
+    padding-left: 20px;
+}
+
+
+// Dots
+.status-box ul li span:after {
+    content: '';
+    position: absolute;
+    left: -10px;
+    top:50%;
+    background: $dark;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    transform: translateY(-50%);
+    box-shadow:0 0 1px 10px $secondary;
+}
+
+
+// Icons
+.status-box ul li span:before{
+    font-family: "Line Awesome Free";
+    font-size: 46px;
+    font-weight: 600;
+    position: absolute;
+    left: -90px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: inherit;
+}
+.status-box ul li:nth-child(1) span:before {
+    content: '\f46c';
+}
+
+.status-box ul li:nth-child(2) span:before {
+    content: '\f560';
+}
+
+.status-box ul li:nth-child(3) span:before {
+    content: '\f06b';  
+}
+
+.status-box ul li:nth-child(4) span:before {
+    content: '\f0d1';
+}
+
+.status-box ul li:nth-child(5) span:before {
+    content: '\f582';
+}
+
+.status-box ul li {
+    position: relative;
+}
+// Line
+.status-box ul li:before {
+   content: '';
+   position: absolute;
+   top: 0;
+   left: -6px;
+   width: 2px;
+   height: 100%;
+   background: $dark;
+   margin-top: 10px;
+}
+
+// Last dot
+.status-box ul li:nth-child(5) span:after {
+    box-shadow:0 20px 1px 20px $secondary;
+}
+
+// line
+.status-box ul li.step-completed:before {
+    background: $gray;
+}
+
+// dots
+.status-box ul li.step-completed span:after {
+    background: $gray;
+}
+
+// text
+.status-box ul li.step-completed span {
+    color: $gray;
+}
+
+// Current status
+.status-box ul li.current span {
+    color: $primary;
+}
+
+.status-box ul li.current span:after {
+    background: $primary;
+}
+
+
+.status-box ul li small {
+    float: right;
+    font-size: 14px;
+    margin-top: 8px;
+}
+
+.searchitem {
+    background: $secondary;
+    padding: 50px;
+    margin: 50px;
+    
+}
+
+#searchbtn {
+    background: rgb(238, 255, 0);
+    width: 20px;
+}
+
+#search {
+    color: rgb(0, 0, 0);
+    height: 40px;
+    width: 90%;
+    border: $primary-hover solid 2px;
+    margin-left: 20px;
+    margin-right: 60px;
+    border-radius: 15px;
+
+}
+
+.zoom {
+    &:hover {
+        transition: $smooth;
+        
+        height: 300px;
+        width: 480px;
+        // overflow: hidden;
+    }
+
+}
+
+.card{
+    overflow: hidden;
+    margin: 18px;
+    padding: 10px;
+    height: 340px;
+    width: 450px;
+    box-shadow: -2px 1px 42px 3px rgba(0,0,0,0.49);
+-webkit-box-shadow: -2px 1px 42px 3px rgba(0,0,0,0.49);
+-moz-box-shadow: -2px 1px 42px 3px rgba(0,0,0,0.49);
+    &:hover {
+        transition: $smooth;
+        background-color: rgba(243, 243, 243, 0.603);
+        box-shadow: -2px 1px 42px 6px rgba(255, 0, 179, 0.49);
+-webkit-box-shadow: -2px 1px 42px 6px rgba(255, 0, 179, 0.49);
+-moz-box-shadow: -2px 1px 42px 6px rgba(255, 0, 179, 0.49);
+        // overflow: hidden;
+    }
+}
+
+.code:hover{
+    
+    
+}
+
+.update_db{
+    background: $secondary;
+    height: 60px;
+    padding: 10px;
+}
+.update_btn{
+    border: 2px solid $primary;
+    color:$primary;
+    border-radius: 15px;
+    width: 150px;
+    transition: $smooth;
+    &:hover{
+        background: $primary;
+        border-color: $pure;
+        color:$pure
+
+    }
+
+}
+
+.inpbox{
+    padding: 5px;
+    margin: 5px;
+    width: 220px;
+    border: 2px solid $primary;
+}
+
+
+.description{
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: $primary; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: $primary-hover; 
+  }
