--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -14,7 +14,7 @@
             
             <div class="flex-1 ml-4">
                 <h1><%= art.item.name%></h1>
-                <span><%= art.item.size%></span>
+                <span><%= art.item.code%></span>
             </div>
             <span class="flex-1"><%= art.qty%> Pcs</span>
             <span class="font-bold text-lg">₹ <%= art.item.price * art.qty%></span>
@@ -78,12 +78,12 @@
 
     <div class="empty-cart py-16">
         <div class="container mx-auto text-center">
-            <h1 class="text-3xl font-bold mb-2">Cart Empty</h1>
+            <h1 class="text-3xl font-bold mb-2">Your cart is Empty!!</h1>
             <p class="text-gray-500 text-lg mb-12">You probably haven't ordered any artwork yet.<br>
                 To order, go to the main page.
             </p>
             <!-- <img class="w-2/5 mx-auto" src="/img/empty-cart.png" alt="empty-cart"> -->
-            <img class="w-2/5 mx-auto" src="/img/Add to Cart.gif" alt="empty-cart">
+            <img class="w-2/5 mx-auto" src="/img/Add_to_Cart.gif" alt="empty-cart">
             <a href="/" class="inline-block px-6 py-2 rounded-full btn-primary text-white font-bold mt-12">Go Back</a>
     
         </div>
