--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -5,22 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce-Artwork</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="/css/app.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
+    
+
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    
+
 </head>
 <body>
     <nav class="container mx-auto px-10 flex items-center justify-between py-4">
         <div>
-            <a href="/"><img src="/img/logo.png" alt="logo"></a>
+            <a href="/"><img  src="/img/artverse-logo (1).png" alt="logo"></a>
 
         </div>
+
+        
+
         <div>
             <ul class="flex items-center">
                 <li class="ml-6"><a href="/">Home</a></li>
-                <li class="ml-6"><a href="/customer/orders">Offers</a></li>
+                <li class="ml-6"><a href="/customer/orders">My orders</a></li>
                 <% if(user) { %>
                 <li class="ml-6">
                     <form id='logout' action='/logout' method='POST'>
@@ -39,7 +58,56 @@
         </div>
     </nav>
     <%- body %>
-
+     
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/js/app.js"></script>
+    <script src="node_modules/medium-zoom/dist/medium-zoom.min.js"></script>
+    <script src="../js/imgeffect.js"></script>
+
+
+
+    <script>
+        $(function () {
+
+            $('#search').autocomplete({
+                source: function (req, res) {
+
+                    $.ajax({
+                        url: "autocomplete",
+                        dataType: "jsonp",
+                        type: "GET",
+                        data: req,
+                        success: function (data) {
+
+                            res(data)
+                        },
+
+                        error: function (err) {
+                            console.log(err.status);
+                        }
+                    })
+                },
+
+
+            })
+
+        })
+
+
+        const button = document.getElementById('searchBtn');
+        button.addEventListener('click', function () {
+            const dataa = document.getElementById('search').value;
+
+            fetch(`http://localhost:4900/getData/${dataa}`) //getData is API name
+                .then(function (result) {
+                    console.log(result);
+                    window.location = result.url;
+
+                })
+                .catch(function (err) {
+                    console.error(err);
+                });
+        });
+    </script>
 </body>
 </html>
